<resources>
    <string name="app_name">AuthenticationExample</string>
    <string name="logo_name">Xoping</string>
    <string name="element_text">Text</string>
    <string name="element_number">N</string>
    <string name="disclaimer_text">Projecte Integrat de Software (2023/24), Universitat de Barcelona.
        Exclusively designed for teaching purposes.</string>

    <!--   Login screen -->
    <string name="login_title">Hi, there!</string>
    <string name="login_text">Log-in with your credentials:</string>
    <string name="login_enter_username_hint">Username</string>
    <string name="login_enter_password_hint">Password</string>
    <string name="login_button">Log in</string>
    <string name="unsignedup_text">If you are not signed up yet:</string>
    <string name="signup_button">Sign up</string>

    <!--  Logged in screen -->
    <string name="logged_in_title">Welcome!</string>

    <!--   Signup screen (EXERCICI 1) -->
    <string name="signup_title">Hi, there!</string>
    <string name="signup_text">Sign-up with your credentials:</string>
    <string name="signup_enter_username_hint">Username</string>
    <string name="signup_enter_password_hint">Password</string>
    <string name="signup_renter_password_hint">Confirm Password</string>
    <string name="signup_button_finally">Sign up</string>
</resources>